# skin_embedded_c_prog_example

./: .gitignore  Makefile.am  README.md  configure.ac  skinc.c  skinclib.c
