#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.71])
AC_INIT([skin_embedded_c_prog_example],[0.1],[k.allen@dkfz-heidelberg.de])
AC_CONFIG_SRCDIR([skinc.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE(skin_embedded_c_prog_example, main)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
AM_PROG_LIBTOOL

# Set shared libraries
AC_DISABLE_STATIC
AC_ENABLE_SHARED

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
